исправлен метод добавления лемм в БД (одна лемма теперь может быть добавленна с разными сайтами) исправлены методы работы с леммами и репозитории (поиск и обновление по лемма+сайт)